[gd_scene load_steps=3 format=3 uid="uid://bihym4ymtm4m5"]

[ext_resource type="Script" path="res://UI/settings_menu.gd" id="1_2ufoj"]
[ext_resource type="Theme" uid="uid://bq64b06ak21t4" path="res://UI/settings_theme.tres" id="2_i68tp"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ufoj")
right_stick_speed = 20.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.223529, 0.239216, 0.784314)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_i68tp")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Volume" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="VolumeLabels" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Volume"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="MasterTxt" type="Label" parent="CenterContainer/VBoxContainer/Volume/VolumeLabels"]
layout_mode = 2
theme = ExtResource("2_i68tp")
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BGMTxt" type="Label" parent="CenterContainer/VBoxContainer/Volume/VolumeLabels"]
layout_mode = 2
theme = ExtResource("2_i68tp")
text = "Bgm Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolume" type="Label" parent="CenterContainer/VBoxContainer/Volume/VolumeLabels"]
layout_mode = 2
theme = ExtResource("2_i68tp")
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VoiceLineTxt" type="Label" parent="CenterContainer/VBoxContainer/Volume/VolumeLabels"]
layout_mode = 2
theme = ExtResource("2_i68tp")
text = "Voice Lines"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeSliders" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 26

[node name="MasterVolume" type="HSlider" parent="CenterContainer/VBoxContainer/Volume/VolumeSliders"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
theme = ExtResource("2_i68tp")
min_value = -24.0
max_value = 1.0
step = 0.01

[node name="BGMVolume" type="HSlider" parent="CenterContainer/VBoxContainer/Volume/VolumeSliders"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_i68tp")
max_value = 3.0
step = 0.01
value = 3.0

[node name="SFXVolume" type="HSlider" parent="CenterContainer/VBoxContainer/Volume/VolumeSliders"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_i68tp")
max_value = 2.0
step = 0.01
value = 1.0

[node name="VoiceLineVolume" type="HSlider" parent="CenterContainer/VBoxContainer/Volume/VolumeSliders"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_i68tp")
min_value = -10.0
max_value = 10.0
step = 0.01
value = -5.3

[node name="ScreenResolution" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 150

[node name="ResolutionLabel" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ScreenResolution"]
layout_mode = 2
theme_override_constants/separation = 33

[node name="ResolutionTxt" type="Label" parent="CenterContainer/VBoxContainer/ScreenResolution/ResolutionLabel"]
layout_mode = 2
theme = ExtResource("2_i68tp")
text = "Resolution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullScreenTxt" type="Label" parent="CenterContainer/VBoxContainer/ScreenResolution/ResolutionLabel"]
layout_mode = 2
theme = ExtResource("2_i68tp")
text = "Fullscreen"

[node name="ResolutionOptions" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ScreenResolution"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Resolutions" type="OptionButton" parent="CenterContainer/VBoxContainer/ScreenResolution/ResolutionOptions"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("2_i68tp")
item_count = 4
selected = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "1152x648"
popup/item_3/id = 3

[node name="FullScreenCheckbox" type="CheckBox" parent="CenterContainer/VBoxContainer/ScreenResolution/ResolutionOptions"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("2_i68tp")
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "ON"

[node name="FPSCheckbox" type="CheckBox" parent="CenterContainer/VBoxContainer/ScreenResolution/ResolutionOptions"]
layout_mode = 2
theme = ExtResource("2_i68tp")
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Display FPS"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 72.0
offset_right = 238.0
offset_bottom = 114.0
theme = ExtResource("2_i68tp")
text = "Back"

[node name="ClearButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1396.0
offset_top = 1006.0
offset_right = 1908.0
offset_bottom = 1050.0
theme = ExtResource("2_i68tp")
text = "Delete Save Data"

[node name="ConfirmButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1452.0
offset_top = 1008.0
offset_right = 1873.0
offset_bottom = 1052.0
theme = ExtResource("2_i68tp")
disabled = true
text = "Are You Sure?"

[node name="SFX" type="AudioStreamPlayer" parent="."]
bus = &"Sound Effects"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/Volume/VolumeSliders/MasterVolume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/Volume/VolumeSliders/BGMVolume" to="." method="_on_bgm_volume_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/Volume/VolumeSliders/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/Volume/VolumeSliders/VoiceLineVolume" to="." method="_on_voice_line_volume_value_changed"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer/ScreenResolution/ResolutionOptions/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/ScreenResolution/ResolutionOptions/FullScreenCheckbox" to="." method="_on_full_screen_checkbox_toggled"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/ScreenResolution/ResolutionOptions/FPSCheckbox" to="." method="_on_fps_checkbox_toggled"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
